GearsetPOC/force-app/main/default/objects/Write_Off_Service_Fee_Override__c/Write_Off_Service_Fee_Override__c.object-meta.xml
<CustomObject>
    <label>Write Off / Service Fee Override</label>
    <nameField>
        <displayFormat>WO-O-{00000}</displayFormat>
        <label>Write Off / Override Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Write Off / Service Fee Overrides</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>