GearsetPOC/force-app/main/default/objects/Write_Off_Service_Fee_Override__c/fields/Advisor_Department__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Department__c</fullName>
    <description>Shows if advisor is working for Webhelp or not</description>
    <formula>Owner:User.CompanyName</formula>
    <label>Advisor Department</label>
    <type>Text</type>
</CustomField>