GearsetPOC/force-app/main/default/objects/Write_Off_Service_Fee_Override__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <label>Approved/Rejected By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>