GearsetPOC/force-app/main/default/objects/Write_Off_Service_Fee_Override__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Write Off / Service Fee Overrides</relationshipLabel>
    <relationshipName>Write_Off_Service_Fee_Overrides</relationshipName>
    <type>Lookup</type>
</CustomField>