GearsetPOC/force-app/main/default/objects/Write_Off_Service_Fee_Override__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Write Off / Service Fee Overrides</relationshipLabel>
    <relationshipName>Write_Off_Service_Fee_Overrides</relationshipName>
    <type>Lookup</type>
</CustomField>