GearsetPOC/force-app/main/default/objects/Write_Off_Service_Fee_Override__c/fields/Derby_Email_Alert__c.field-meta.xml
<CustomField>
    <fullName>Derby_Email_Alert__c</fullName>
    <defaultValue>&quot;natasha.payne@uk.webhelp.com&quot;</defaultValue>
    <label>Derby Email Alert</label>
    <type>Email</type>
</CustomField>