GearsetPOC/force-app/main/default/objects/Write_Off_Service_Fee_Override__c/fields/Incident_Number__c.field-meta.xml
<CustomField>
    <fullName>Incident_Number__c</fullName>
    <label>Incident Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>