GearsetPOC/force-app/main/default/objects/Write_Off_Service_Fee_Override__c/fields/PNR_s__c.field-meta.xml
<CustomField>
    <fullName>PNR_s__c</fullName>
    <label>PNR(s)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>