GearsetPOC/force-app/main/default/objects/Write_Off_Service_Fee_Override__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Social Media Payment</fullName>
            </value>
            <value>
                <fullName>CB/CBE</fullName>
            </value>
            <value>
                <fullName>Vulnerable Customer</fullName>
            </value>
            <value>
                <fullName>Multiple Bookings / Exchanges</fullName>
            </value>
            <value>
                <fullName>Disruption</fullName>
            </value>
            <value>
                <fullName>E-Voucher Not Received</fullName>
            </value>
            <value>
                <fullName>Child Only Booking</fullName>
            </value>
            <value>
                <fullName>DC Account</fullName>
            </value>
            <value>
                <fullName>Paper Gift Vouchers</fullName>
            </value>
            <value>
                <fullName>Exchange of ECC &amp; Station Bookings</fullName>
            </value>
            <value>
                <fullName>Previously Changed Offline</fullName>
            </value>
            <value>
                <fullName>Re-Accommodated Ticket</fullName>
            </value>
            <value>
                <fullName>Interline Exchange</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Operator Error(staff)</fullName>
            </value>
            <value>
                <fullName>Death/ Illness / Injury</fullName>
            </value>
            <value>
                <fullName>Eurostar Changes to Timetable</fullName>
            </value>
            <value>
                <fullName>Delays</fullName>
            </value>
            <value>
                <fullName>Fraud</fullName>
            </value>
            <value>
                <fullName>System Error</fullName>
            </value>
            <value>
                <fullName>Customer Error</fullName>
            </value>
            <value>
                <fullName>Strike</fullName>
            </value>
            <value>
                <fullName>Flow Forward</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>Missed Departure</fullName>
            </value>
            <value>
                <fullName>Function not available online (loyalty only)</fullName>
            </value>
            <value>
                <fullName>Day of Travel Exchange</fullName>
                <isActive>false</isActive>
                <label>Day of Travel Exchange</label>
            </value>
            <value>
                <fullName>EFT Free Upgrade</fullName>
                <isActive>false</isActive>
                <label>EFT Free Upgrade</label>
            </value>
            <value>
                <fullName>Exchange With Different Payment Card</fullName>
                <isActive>false</isActive>
                <label>Exchange With Different Payment Card</label>
            </value>
            <value>
                <fullName>Old Compensation</fullName>
                <isActive>false</isActive>
                <label>Old Compensation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>