GearsetPOC/force-app/main/default/objects/Write_Off_Service_Fee_Override__c/fields/Trigger_Feedback_Creation__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Feedback_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger Feedback Creation</label>
    <type>Checkbox</type>
</CustomField>