GearsetPOC/force-app/main/default/objects/Write_Off_Service_Fee_Override__c/validationRules/Must_Select_Vocal_Authorisation_100_250.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Select_Vocal_Authorisation_100_250</fullName>
    <active>true</active>
    <description>If value is over between 100 - 250 an ops manager in derby must be selected
Josh Bolsover, Natasha Payne or Georgiana Balan</description>
    <errorConditionFormula>AND
(OR($User.Department = &quot;Derby&quot;,$User.Department = &quot;Bucharest&quot;),

(AND( 
Write_Off_Amount__c &gt; 100 , 
Write_Off_Amount__c &lt; 250, ISPICKVAL(Currency__c, &quot;GBP&quot;))
||
AND(
Write_Off_Amount__c &gt; 100 , 
Write_Off_Amount__c &lt; 285, ISPICKVAL(Currency__c, &quot;EUR&quot;))
||
AND(
Write_Off_Amount__c &gt; 100 , 
Write_Off_Amount__c &lt; 320, ISPICKVAL(Currency__c, &quot;USD&quot;))
),


TEXT(Who_Gave_Vocal_Authorisation__c)&lt;&gt; &quot;Josh Bolsover&quot;,
TEXT(Who_Gave_Vocal_Authorisation__c)&lt;&gt; &quot;Disruption&quot;,
TEXT(Who_Gave_Vocal_Authorisation__c)&lt;&gt; &quot;Adrian Hobjila&quot;,
TEXT(Who_Gave_Vocal_Authorisation__c)&lt;&gt; &quot;Natasha Payne&quot;
)</errorConditionFormula>
    <errorMessage>Please select Josh Bolsover, Natasha Payne or Adrian Hobjila</errorMessage>
</ValidationRule>