GearsetPOC/force-app/main/default/objects/Write_Off_Service_Fee_Override__c/validationRules/Must_Select_Vocal_Authorisation_50_100_B.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Select_Vocal_Authorisation_50_100_B</fullName>
    <active>true</active>
    <description>If value is over between 50 - 100 a TL in Bucharest must be selected</description>
    <errorConditionFormula>AND(
AND($User.Department = &quot;Bucharest&quot;),

AND( 
Write_Off_Amount__c &gt; 49.99 , 
Write_Off_Amount__c &lt; 100.01),

TEXT(Who_Gave_Vocal_Authorisation__c)&lt;&gt; &quot;Andreea Voinea&quot;,
TEXT(Who_Gave_Vocal_Authorisation__c)&lt;&gt; &quot;Disruption&quot;,
TEXT(Who_Gave_Vocal_Authorisation__c)&lt;&gt; &quot;Taoufik Rai&quot;,
TEXT(Who_Gave_Vocal_Authorisation__c)&lt;&gt; &quot;Ahmed Ferchichi&quot;,
TEXT(Who_Gave_Vocal_Authorisation__c)&lt;&gt; &quot;Adrian Hobjila&quot;,
TEXT(Who_Gave_Vocal_Authorisation__c)&lt;&gt; &quot;Sebastian Stan&quot;
)</errorConditionFormula>
    <errorMessage>Please select a TL in Bucharest</errorMessage>
</ValidationRule>