GearsetPOC/force-app/main/default/objects/Write_Off_Service_Fee_Override__c/listViews/My_Write_Off_s_Overrides.listView-meta.xml
<ListView>
    <fullName>My_Write_Off_s_Overrides</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Write-Off&#39;s &amp; Overrides</label>
    <language>en_US</language>
</ListView>