GearsetPOC/force-app/main/default/objects/Write_Off_Service_Fee_Override__c/listViews/WO_to_be_approved_by_Tracie.listView-meta.xml
<ListView>
    <fullName>WO_to_be_approved_by_Tracie</fullName>
    <columns>NAME</columns>
    <columns>Currency__c</columns>
    <columns>Write_Off_Amount__c</columns>
    <columns>Who_Gave_Vocal_Authorisation__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approval_Status__c</field>
        <operation>notEqual</operation>
        <value>approved,rejected,recalled</value>
    </filters>
    <filters>
        <field>Who_Gave_Vocal_Authorisation__c</field>
        <operation>equals</operation>
        <value>Tracie Graham</value>
    </filters>
    <filters>
        <field>Write_Off_Amount__c</field>
        <operation>greaterThan</operation>
        <value>249</value>
    </filters>
    <filters>
        <field>Advisor_Department__c</field>
        <operation>equals</operation>
        <value>Webhelp</value>
    </filters>
    <filters>
        <field>Created_Date_Time__c</field>
        <operation>greaterOrEqual</operation>
        <value>5/1/2019 12:00 AM</value>
    </filters>
    <label>WO to be approved by Tracie</label>
    <language>en_US</language>
    <sharedTo>
        <group>Advisor_QA_ECC</group>
        <group>Advisor_QA_QA_Team</group>
        <group>Write_Off_Approvers_Ashford</group>
    </sharedTo>
</ListView>